--- a/_posts/about/news/year2001/2001-09-16-oldnews1.md
+++ b/_posts/about/news/year2001/2001-09-16-oldnews1.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2001-09-16
 permalink: about/news/year2001/oldnews1
+tags: news
 title: "Technopark Corp. Visited Vienne Conference"
 description: |
   September 10-14, 2001 TechnoPark Corp. visited the European
@@ -10,17 +11,17 @@ keywords:
   - software development
 ---
 
-From September 10 to September 14, the Vienna University of Technology hosted thethird Vienne 
+From September 10 to September 14, the Vienna University of Technology hosted thethird Vienne
 software conference, ESEC/FSE 2001.
 
-ESEC 2001 is a European event. It gathered representatives of softwareengineering business as well 
-as software-related academicians. The conferenceprovided workshops, tutorials, and discussions of 
+ESEC 2001 is a European event. It gathered representatives of softwareengineering business as well
+as software-related academicians. The conferenceprovided workshops, tutorials, and discussions of
 the major problems insoftware engineering.
 
-The conference offered tutorials on software architecture design strategies,component technologies, 
-component-based software engineering, web developmentwith XML and XSL, software development with 
-UML, peer-to-peer informationsystems, and some others. Among the offered tutorials, the most popular 
+The conference offered tutorials on software architecture design strategies,component technologies,
+component-based software engineering, web developmentwith XML and XSL, software development with
+UML, peer-to-peer informationsystems, and some others. Among the offered tutorials, the most popular
 onecovered requirements-based engineering providing new approach to softwaredevelopment process.
 
-From TechnoPark Corp. representatives, they have already started theintegration of 
+From TechnoPark Corp. representatives, they have already started theintegration of
 Requirements-Based software development process into company'soperation.
