--- a/_posts/about/news/year2006/2006-12-13-news13.md
+++ b/_posts/about/news/year2006/2006-12-13-news13.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-12-13
 permalink: about/news/year2006/news13
+tags: news
 title: "Voipx: In Voip Traffic Exchange Software Talks"
 description: |
   TechnoPark Corp. finished development of new VoIP Traffic
@@ -10,49 +11,49 @@ keywords:
   - software development
 ---
 
-The introduction of new VoIP exchange platform is a desired event. Demand for high-quality IP 
+The introduction of new VoIP exchange platform is a desired event. Demand for high-quality IP
 Telephony Exchanges is stimulated by the fast growth of the industry.
 
-According to the figures posted on, subscribers to VoIP services grew 18 percent to 8.2 million 
-users in the third quarter of 2006. VoIP revenues are up two and a half times to $732 million across 
-the U.S., compared to last year at $298 million. Predictions have the market growth projected at 1.5 
-million new subscriptions in the fourth quarter to round out the year with 9.7 million or nearly 8.7 
+According to the figures posted on, subscribers to VoIP services grew 18 percent to 8.2 million
+users in the third quarter of 2006. VoIP revenues are up two and a half times to $732 million across
+the U.S., compared to last year at $298 million. Predictions have the market growth projected at 1.5
+million new subscriptions in the fourth quarter to round out the year with 9.7 million or nearly 8.7
 percent of all U.S. households.
 
-LearningGuide Solutions studied the user's intentions about VoIP. The poll, conducted between June 
-and October 2006, found that 30% were already using IP telephones, 34% intended to in the next 
+LearningGuide Solutions studied the user's intentions about VoIP. The poll, conducted between June
+and October 2006, found that 30% were already using IP telephones, 34% intended to in the next
 twelve months and 16% were considering it.
 
-"This is in an increase on previous expectations of the growth of VoIP, signalling further change in 
-the workplace," said Cees Louwers, Managing Director, LearningGuide Solutions. "Users will be faced 
-with changes in how to use the most fundamental piece of office equipment, as telephones become part 
+"This is in an increase on previous expectations of the growth of VoIP, signalling further change in
+the workplace," said Cees Louwers, Managing Director, LearningGuide Solutions. "Users will be faced
+with changes in how to use the most fundamental piece of office equipment, as telephones become part
 of the office network."
 
-Voice over Internet Protocol is developing in aggressive competitive environment. Its customers and 
-profits are growing fast, however the competition with POTS (Plain Old Telephone Systems) is still 
-severe. Having a number of advantages like cheap or even free connection, IP Telephony often falls 
-behind the POTS in quality and security of connection. The problem is within eyeshot of VoIP 
+Voice over Internet Protocol is developing in aggressive competitive environment. Its customers and
+profits are growing fast, however the competition with POTS (Plain Old Telephone Systems) is still
+severe. Having a number of advantages like cheap or even free connection, IP Telephony often falls
+behind the POTS in quality and security of connection. The problem is within eyeshot of VoIP
 exchange software developers, and efforts targeted to its solution are made.
 
-VoIPX.com developed by Technopark Corp. is a new generation platform heedful of the latest demands 
-of IP Telephony. The system is user-oriented thus it is aimed at fulfilling of a number of basic 
+VoIPX.com developed by Technopark Corp. is a new generation platform heedful of the latest demands
+of IP Telephony. The system is user-oriented thus it is aimed at fulfilling of a number of basic
 features: user-friendly interface, comprehensive billing, quality of calls, and security.
 
-The platform is developed with the use of modern programming technologies enabling its high 
+The platform is developed with the use of modern programming technologies enabling its high
 scalability. The technologies include Ajax, used for interface design, and powerful PostgreSQL database.
 
-Dynamical routing provides system's switching to better-quality channel automatically. In so doing 
-the system is able to select a channel with the same capabilities and price. Dynamical routing may 
+Dynamical routing provides system's switching to better-quality channel automatically. In so doing
+the system is able to select a channel with the same capabilities and price. Dynamical routing may
 improve connection quality without increasing cost of a call.
 
-Modularity of system's architecture enables making software components updates in order to maintain 
+Modularity of system's architecture enables making software components updates in order to maintain
 the proper level of security.
 
-The software enables processing the requests for origination/termination of connections through 
-H.323 and SIP protocols. With VoIPX.com, user can control origination and termination session 
-process, get detailed statistics reports for each session, supervise service quality, be advised on 
-the choice of appropriate equipment, etc. The Exchange Platform has an easy-to-use and comprehensive 
+The software enables processing the requests for origination/termination of connections through
+H.323 and SIP protocols. With VoIPX.com, user can control origination and termination session
+process, get detailed statistics reports for each session, supervise service quality, be advised on
+the choice of appropriate equipment, etc. The Exchange Platform has an easy-to-use and comprehensive
 integrated billing system.
 
-VoIPX Platform has already been tested and released by outsourcing software development company 
+VoIPX Platform has already been tested and released by outsourcing software development company
 TechnoPark Corp., and is available at .
