--- a/_posts/about/news/year2007/2007-07-30-news3.md
+++ b/_posts/about/news/year2007/2007-07-30-news3.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-07-30
 permalink: about/news/year2007/news3
+tags: news
 title: "Mysellerspace Project Finished By Technopark Corp."
 description: |
   TechnoPark Corp. recently finished a new web commerce
@@ -11,11 +12,11 @@ keywords:
   - software development
 ---
 
-As a Flash and PHP-based web service, MySellerSpace.com enables the web community to offer their 
-items for sale through Seller Space Widgets. Users can create a widget for each item for sale in 
+As a Flash and PHP-based web service, MySellerSpace.com enables the web community to offer their
+items for sale through Seller Space Widgets. Users can create a widget for each item for sale in
 their profile. The number of widgets per profile is unlimited.
 
-Sale items are categorized and can be searched by name, category, price diapason and other 
+Sale items are categorized and can be searched by name, category, price diapason and other
 parameters. All the widgets created within MySellerSpace are also placed on other seller networks.
 
 The new service is available at .
