--- a/_posts/about/news/year2007/2007-08-13-news1.md
+++ b/_posts/about/news/year2007/2007-08-13-news1.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-08-13
 permalink: about/news/year2007/news1
+tags: news
 title: "A New Website For The Concord Group Corporation Just Released"
 description: |
   TechnoPark Corp. recently completed website development for
@@ -12,15 +13,15 @@ keywords:
 
 A Russian-English bilingual website for the Concord Group is now live at .
 
-Developed by TechnoPark Corp., the new site aims to boosts the visibility and online image of the 
-company. The goal was a minimalist design that exudes an official style, well-defined structure and 
+Developed by TechnoPark Corp., the new site aims to boosts the visibility and online image of the
+company. The goal was a minimalist design that exudes an official style, well-defined structure and
 clear navigation.
 
-The Concord Group, which includes a number of companies and organizations, focuses on the industrial 
-construction, metallurgical waste products processing and wind power industries. Concord Group has 
-operations in multiple countries within Europe, Asia, Africa, and the Middle East. The company has 
+The Concord Group, which includes a number of companies and organizations, focuses on the industrial
+construction, metallurgical waste products processing and wind power industries. Concord Group has
+operations in multiple countries within Europe, Asia, Africa, and the Middle East. The company has
 headquarters in the Ukraine, United Arab Emirates, China, and Poland.
 
-The Concord Group and TechnoPark Corp. have enjoyed a business relationship for more than a year. 
-The cooperation has yielded several successful contracts, of which the corporate website development 
+The Concord Group and TechnoPark Corp. have enjoyed a business relationship for more than a year.
+The cooperation has yielded several successful contracts, of which the corporate website development
 project was the latest.
