--- a/_posts/about/news/year2008/2008-03-20-iptv.md
+++ b/_posts/about/news/year2008/2008-03-20-iptv.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2008-03-20
 permalink: about/news/year2008/iptv
+tags: news
 label: Video On Demand
 title: "Technopark Corp. Helps Deliver \"Video On Demand\" Over The Internet."
 description: |
