--- a/_posts/about/news/year2008/2008-06-02-zumber.md
+++ b/_posts/about/news/year2008/2008-06-02-zumber.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2008-06-02
 permalink: about/news/year2008/zumber
+tags: news
 title: "Technopark Corp Develops Their First Personalized Search Engine For A Niche Market"
 description: |
   The new search engine is a personalized, small system that
