--- a/_posts/about/news/year2008/2008-07-18-poker.md
+++ b/_posts/about/news/year2008/2008-07-18-poker.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2008-07-18
 permalink: about/news/year2008/poker
+tags: news
 title: "Technopark Corp. Helps Gaming Community Reach A United States Market"
 description: |
   TechnoPark Corp.'s software tools enable membership payments
@@ -13,55 +14,55 @@ keywords:
   - Gambling Software
 ---
 
-Naples, FL, July 16, 2008 - TechnoPark Corp. manages the development of GS-Poker software that will 
-allow the online gaming industry to charge membership fees to citizens in the United States. It is 
-illegal for a U.S. citizen to transfer funds to pay for online poker, and this includes the use of 
+Naples, FL, July 16, 2008 - TechnoPark Corp. manages the development of GS-Poker software that will
+allow the online gaming industry to charge membership fees to citizens in the United States. It is
+illegal for a U.S. citizen to transfer funds to pay for online poker, and this includes the use of
 credit cards online. Poker providers have had to change their business model to conform to these laws.
 
-Instead of placing money on the outcome of a poker game, with the TechnoPark GS-Poker software 
-solution, U.S. customers will be able to sign up for memberships and play poker for fun. There will 
-be cash bonuses for some of the luckiest players at the end of the monthly game play. However, no 
+Instead of placing money on the outcome of a poker game, with the TechnoPark GS-Poker software
+solution, U.S. customers will be able to sign up for memberships and play poker for fun. There will
+be cash bonuses for some of the luckiest players at the end of the monthly game play. However, no
 money will be rewarded for individual games.
 
-Online Gaming is extremely popular throughout the world. Creating a membership model for online 
-gaming could help poker companies tap into some staggering earning opportunities. In 2007, people 
-living in Norway spent an estimated 961 million Euros while gambling online. United States citizens 
+Online Gaming is extremely popular throughout the world. Creating a membership model for online
+gaming could help poker companies tap into some staggering earning opportunities. In 2007, people
+living in Norway spent an estimated 961 million Euros while gambling online. United States citizens
 spent about 84.65 billion dollars on Internet gambling annually before a ban was enacted in 2006.
 
-Since 2006, the Unlawful Internet Gambling Enforcement Act (UIGEA) has prevented U.S. citizens from 
-transferring funds to an Internet gambling institution. Fantasy Sports, online lotteries and horse 
-races are exceptions to this law. They continue to be permitted. Memberships for playing poker 
-online are lawful as long as a client is simply playing the game, not betting money on the result of 
+Since 2006, the Unlawful Internet Gambling Enforcement Act (UIGEA) has prevented U.S. citizens from
+transferring funds to an Internet gambling institution. Fantasy Sports, online lotteries and horse
+races are exceptions to this law. They continue to be permitted. Memberships for playing poker
+online are lawful as long as a client is simply playing the game, not betting money on the result of
 a particular hand of cards.
 
-Online Poker was always a challenge in the United States. One company, Betfair, claims it had long 
-avoided the U.S market, so when the UIGEA legislation passed, Betfair didn't suffer a large economic 
-downturn. Unfortunately, many companies did suffer. After 2006, many online gaming companies had to 
-rethink their U.S. market strategy. Some companies, like Bodog.com Entertainment, essentially 
-abandoned its U.S. gaming-related advertising and decided to focus on the lucrative European 
-audience. For those poker companies still looking to work with U.S. customers, following the laws, 
-creating technology to allow game play, and attracting an interested audience has been a huge 
-challenge. In order to remain within the boundaries of U.S. law, some poker companies have set up 
+Online Poker was always a challenge in the United States. One company, Betfair, claims it had long
+avoided the U.S market, so when the UIGEA legislation passed, Betfair didn't suffer a large economic
+downturn. Unfortunately, many companies did suffer. After 2006, many online gaming companies had to
+rethink their U.S. market strategy. Some companies, like Bodog.com Entertainment, essentially
+abandoned its U.S. gaming-related advertising and decided to focus on the lucrative European
+audience. For those poker companies still looking to work with U.S. customers, following the laws,
+creating technology to allow game play, and attracting an interested audience has been a huge
+challenge. In order to remain within the boundaries of U.S. law, some poker companies have set up
 poker "schools". Other sites offer poker videos and a chance to mingle with poker celebrities.
 
-TechnoPark Corp. has used their technical expertise and skilled project management procedures to 
-work with the gaming industry to solve this complex situation. TechnoPark Corp. has allowed gaming 
-companies to make a transition from gambling to attracting customers to play poker online for a 
-monthly fee. They have set up the technology to create licenses, charge monthly fees, and install 
-the payment software on a gaming client's servers. They welcome other gaming companies to inquire 
-about their membership software procedure, as TechnoPark Corp. can help bring profits to struggling 
+TechnoPark Corp. has used their technical expertise and skilled project management procedures to
+work with the gaming industry to solve this complex situation. TechnoPark Corp. has allowed gaming
+companies to make a transition from gambling to attracting customers to play poker online for a
+monthly fee. They have set up the technology to create licenses, charge monthly fees, and install
+the payment software on a gaming client's servers. They welcome other gaming companies to inquire
+about their membership software procedure, as TechnoPark Corp. can help bring profits to struggling
 online websites.
 
-In response to TechnoPark Corp.'s gaming software, a recent client said this, ""The software product 
-has over 2 million lines of code and has been in development since 2001. It will be a challenging 
-task for their software architects and programmers to change the business model and keep the product 
+In response to TechnoPark Corp.'s gaming software, a recent client said this, ""The software product
+has over 2 million lines of code and has been in development since 2001. It will be a challenging
+task for their software architects and programmers to change the business model and keep the product
 stable, while continuing to keep the total cost of this migration on budget."
 
-TechoPark Corp. has been developing these gaming tools over time. They are poised to usher in a new 
-type of online poker industry. Arthur Petrenko, TechnoPark Corp.'s Marketing Director, said, "It's a 
-pleasure to help U.S. customers and international gaming organizations find a legal way to meet and 
-create an online poker playing society. We are going to finish the development of the beta-version 
+TechoPark Corp. has been developing these gaming tools over time. They are poised to usher in a new
+type of online poker industry. Arthur Petrenko, TechnoPark Corp.'s Marketing Director, said, "It's a
+pleasure to help U.S. customers and international gaming organizations find a legal way to meet and
+create an online poker playing society. We are going to finish the development of the beta-version
 of this new platform before the end of September, 2008."
 
-TechnoPark Corp. is a US-based outsourcing software development company with development centers 
+TechnoPark Corp. is a US-based outsourcing software development company with development centers
 across the globe, including the Ukraine, India and China.
