--- a/_posts/about/news/year2009/2009-02-12-metrics.md
+++ b/_posts/about/news/year2009/2009-02-12-metrics.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2009-02-12
 permalink: about/news/year2009/metrics
+tags: news
 label: Four Symptoms
 title: "Four Most Severe Symptoms Of Lost Quality Control"
 description: |
@@ -18,12 +19,12 @@ keywords:
   - continuous integration
 ---
 
-Almost every software outsourcing programming contract experiences the same problems with quality of 
-software code produced by remote programmers. Customers don't have enough programming skills and 
-spare time to check the quality-of-code regularly. Programmers don't think too much about quality 
+Almost every software outsourcing programming contract experiences the same problems with quality of
+software code produced by remote programmers. Customers don't have enough programming skills and
+spare time to check the quality-of-code regularly. Programmers don't think too much about quality
 since the customer is far away.
 
-As a result, quality-of-code is out of the customer's control. There are four severe symptoms of 
+As a result, quality-of-code is out of the customer's control. There are four severe symptoms of
 such a situation:
 
 <ol>
@@ -33,16 +34,16 @@ such a situation:
         <li>You feel that if you want to get higher quality-of-code you have to change programmers.</li>
     </ol>
 
-TechnoPark Corp. has developed a solution that returns control over quality-of-code to the 
-customer's hands. Special software built into a continuous integration cycle collects the two 
-most-valuable source code metrics (Code Coverage and Cyclomatic Complexity) and converts their 
-values into bonuses for programmers. By doing this regularly and automatically, the customer and the 
+TechnoPark Corp. has developed a solution that returns control over quality-of-code to the
+customer's hands. Special software built into a continuous integration cycle collects the two
+most-valuable source code metrics (Code Coverage and Cyclomatic Complexity) and converts their
+values into bonuses for programmers. By doing this regularly and automatically, the customer and the
 project team get a unique level of control over quality-of-code.
 
 More details about the method are available on the TechnoPark Corp website at [ht
-tp://www.technoparkcorp.com/innovations/metrics](http://www.technoparkcorp.com/innovations/metrics). 
-The method can be implemented in new projects managed by TechnoPark Corp and in currently running 
+tp://www.technoparkcorp.com/innovations/metrics](http://www.technoparkcorp.com/innovations/metrics).
+The method can be implemented in new projects managed by TechnoPark Corp and in currently running
 projects where TechnoPark Corp might play a role as the project management contractor.
 
-TechnoPark Corp. is a custom software development company that makes complex full-scale project 
+TechnoPark Corp. is a custom software development company that makes complex full-scale project
 management simple and clear by means of automated innovative metrics.
