--- a/_posts/about/news/year2009/2009-03-21-plz.md
+++ b/_posts/about/news/year2009/2009-03-21-plz.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2009-03-21
 permalink: about/news/year2009/plz
+tags: news
 label: Patent-pending invention
 title: "Patent-pending Invention Enabled Success In A Project By Technoparkcorp.com For Stadtlist.de"
 description: |
@@ -21,34 +22,34 @@ keywords:
   - EPO
 ---
 
-During 2008 TechnoPark Corp. successfully applied a proprietary method of automated 
-quality-of-process control to the web2.0 software project, made for StadtList.de. The application of 
+During 2008 TechnoPark Corp. successfully applied a proprietary method of automated
+quality-of-process control to the web2.0 software project, made for StadtList.de. The application of
 the method enabled in-time delivery and effective usage of customer's money.
 
-"Time-to-market and effective cost usage were our two critical business requirements, which were 
+"Time-to-market and effective cost usage were our two critical business requirements, which were
 fully satisfied by the TechnoPark team", says Markus Leinemann, the director and founder of StadtList.de.
 
-The method was filed for patent by TechnoPark in the United States Patent and Trademark Office 
-(USPTO) in September 2008. After the successful application of the method to the project in Germany, 
+The method was filed for patent by TechnoPark in the United States Patent and Trademark Office
+(USPTO) in September 2008. After the successful application of the method to the project in Germany,
 TechnoPark filed patent application to the European Patent Office (EPO).
 
-The system developed for StadtList will be launched in Germany in April 2009 and is going to attract 
+The system developed for StadtList will be launched in Germany in April 2009 and is going to attract
 attention of the most active part of German-speaking web community.
 
 TechnoPark Corp. is planning to further expand their business activity to customers in Germany.
 
-StadtList Cooperation, an innovative German e-commerce company, is an owner and manager of a number 
+StadtList Cooperation, an innovative German e-commerce company, is an owner and manager of a number
 of famous and well-developed German and worldwide web-projects, including StadtList.de.
 
-TechnoPark Corp., a custom software development US-based company, is an author of several innovative 
+TechnoPark Corp., a custom software development US-based company, is an author of several innovative
 methods of project management for software development, some of them pending patents in USA.
 
 [presseecho.de](http://www.presseecho.de/vermischtes/PE12379715869833.htm) | [openpr.de](http://www.o
-penpr.de/news/294748/Neue-innovative-Software-Projekt-von-TechnoParkCorp-com-fuer-StadtList-de.html) 
+penpr.de/news/294748/Neue-innovative-Software-Projekt-von-TechnoParkCorp-com-fuer-StadtList-de.html)
 | [sanepr.com](http://www.sanepr.com/Pa
-tent-pending-invention-enabled-success-in-a-project-by-TechnoParkCorpcom-for-StadtListde\_74294.cfm) 
+tent-pending-invention-enabled-success-in-a-project-by-TechnoParkCorpcom-for-StadtListde\_74294.cfm)
 | [prlog.org](http://www.prlog.org/10
-204924-patentpending-invention-enabled-success-in-project-by-technoparkcorpcom-for-stadtlistde.html) 
+204924-patentpending-invention-enabled-success-in-project-by-technoparkcorpcom-for-stadtlistde.html)
 | [1888pressrelease.com](http://w
-ww.1888pressrelease.com/patent-pending-invention-enabled-success-in-software-project-pr-108256.html) 
+ww.1888pressrelease.com/patent-pending-invention-enabled-success-in-software-project-pr-108256.html)
 | [free-press-release.com](http://www.free-press-release.com/news/200903/1237970043.html)
