--- a/_posts/about/news/year2009/2009-04-23-testing.md
+++ b/_posts/about/news/year2009/2009-04-23-testing.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2009-04-23
 permalink: about/news/year2009/testing
+tags: news
 label: Anticipated Bugs
 title: "Software Bugs Should Be Anticipated In Advance"
 description: |
@@ -17,13 +18,13 @@ keywords:
   - quality control
 ---
 
-The most common and the most damaging assumption in software development is that "quality software 
-has no bugs." In an article published on their website, TechnoPark Corp. explains that quality of 
-software consists of the anticipation, discovery, and resolution of bugs. These three measures lead 
-to a high quality of software products, and were successfully implemented in seven software projects 
+The most common and the most damaging assumption in software development is that "quality software
+has no bugs." In an article published on their website, TechnoPark Corp. explains that quality of
+software consists of the anticipation, discovery, and resolution of bugs. These three measures lead
+to a high quality of software products, and were successfully implemented in seven software projects
 completed by TechnoPark Corp. during the last year.
 
-More details about these measures are available on the TechnoPark Corp. 
-[website](http://www.technoparkcorp.com/innovations/test-planning). TechnoPark Corp. is a software 
-development general contractor that uses automated innovative metrics to make complex full-scale 
+More details about these measures are available on the TechnoPark Corp.
+[website](http://www.technoparkcorp.com/innovations/test-planning). TechnoPark Corp. is a software
+development general contractor that uses automated innovative metrics to make complex full-scale
 project management simple and clear.
