--- a/_posts/about/news/year2009/2009-05-22-profes.md
+++ b/_posts/about/news/year2009/2009-05-22-profes.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2009-05-22
 permalink: about/news/year2009/profes
+tags: news
 label: PROFES 2009
 title: "Profes 2009 Attendees Glimpse Method Behind Superior Cost Estimating Accuracy"
 description: |
@@ -20,37 +21,37 @@ keywords:
   - scope champions
 ---
 
-Naples, FL (PRWEB) May 22, 2009 - On June 16, 2009, Yegor Bougaenko, CEO of TechnoPark Corp., will 
-present a paper on a "Method for Software Cost Estimating Using Scope Champions" at [PROFES 
-2009](http://www.profes2009.org), the 10th International Conference on Product Focused Software 
+Naples, FL (PRWEB) May 22, 2009 - On June 16, 2009, Yegor Bougaenko, CEO of TechnoPark Corp., will
+present a paper on a "Method for Software Cost Estimating Using Scope Champions" at [PROFES
+2009](http://www.profes2009.org), the 10th International Conference on Product Focused Software
 Development and Process Improvement, in Oulu, Finland from June 15-17, 2009.
 
-This paper highlights the proprietary method behind TechnoPark Corp.'s software that uses a new 
-revolutionary approach to software project cost estimating. Rather than estimating the entire 
-project scope, Arthur Petrenko, TechnoPark's Marketing Director, explains that the "method estimates 
-a very limited number of selective elements called Scope Champions, rather that trying to estimate 
-the entire project. Then a formula is applied to calculate the total cost. Clients find this method 
+This paper highlights the proprietary method behind TechnoPark Corp.'s software that uses a new
+revolutionary approach to software project cost estimating. Rather than estimating the entire
+project scope, Arthur Petrenko, TechnoPark's Marketing Director, explains that the "method estimates
+a very limited number of selective elements called Scope Champions, rather that trying to estimate
+the entire project. Then a formula is applied to calculate the total cost. Clients find this method
 saves time and improves accuracy of the estimate."
 
-While TechnoPark applied for the method's patent last fall, Bougaenko decided to wait for the 
-conference to unveil the process in order "to take advantage of PROFES' industry reach, as the 
-number and breadth of companies there showcases companies' need for and commitment to the process 
-improvement of software development, a sphere in which TechnoPark and its innovations excel," 
+While TechnoPark applied for the method's patent last fall, Bougaenko decided to wait for the
+conference to unveil the process in order "to take advantage of PROFES' industry reach, as the
+number and breadth of companies there showcases companies' need for and commitment to the process
+improvement of software development, a sphere in which TechnoPark and its innovations excel,"
 mentions Petrenko.
 
-Non-attendees who wish to examine Bougaenko's paper will be able to do so when TechnoPark publishes 
-the article along with presentation slides on TechnoPark's website immediately following the 
-conference. Conference materials will also be published by Springer in the Lecture Notes of Computer 
+Non-attendees who wish to examine Bougaenko's paper will be able to do so when TechnoPark publishes
+the article along with presentation slides on TechnoPark's website immediately following the
+conference. Conference materials will also be published by Springer in the Lecture Notes of Computer
 Science (LNCS) Series.
 
-TechnoPark Corp. is a specialized project management firm providing quality development services to 
-companies worldwide. TechnoPark effectively manages extreme requirements, tight deadlines, and 
-limited budgets, setting the new standard in providing solutions to customers that are proven to be 
-both high value and high quality. For more information about how TechnoPark is revolutionizing 
+TechnoPark Corp. is a specialized project management firm providing quality development services to
+companies worldwide. TechnoPark effectively manages extreme requirements, tight deadlines, and
+limited budgets, setting the new standard in providing solutions to customers that are proven to be
+both high value and high quality. For more information about how TechnoPark is revolutionizing
 development, visit [www.TechnoParkCorp.com](/innovations/scope-champions).
 
 [prweb.com](http://www.prweb.com/releases/2009/05/prweb2448764.htm) | [prlog.com](http://www.pr
-log.org/10243020-profes-2009-attendees-glimpse-method-behind-superior-cost-estimating-accuracy.html) 
+log.org/10243020-profes-2009-attendees-glimpse-method-behind-superior-cost-estimating-accuracy.html)
 | [free-press-release.com](http://www.free-press-release.com/news/200905/1243236227.html) | [1888pressrelease.com](http://w
-ww.1888pressrelease.com/profes-2009-attendees-glimpse-method-behind-superior-cost-es-pr-121766.html) 
+ww.1888pressrelease.com/profes-2009-attendees-glimpse-method-behind-superior-cost-es-pr-121766.html)
 | [pr.com](http://www.pr.com/press-release/154407)
