--- a/_posts/about/news/year2010/2010-04-15-rqdql.md
+++ b/_posts/about/news/year2010/2010-04-15-rqdql.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2010-04-15
 permalink: about/news/year2010/rqdql
+tags: news
 label: RQDQL
 title: "Formal And Easy To Understand Software Requirements"
 description: |
@@ -23,8 +24,8 @@ keywords:
 
 Read more on this topic at [RQDQL website](http://www.rqdql.com/rqdql.html).
 
-TechnoPark Corp. started a new initiative, called Requirements Definition and Query Language 
-(RQDQL), which is going to design a method and software for automated specification of software 
+TechnoPark Corp. started a new initiative, called Requirements Definition and Query Language
+(RQDQL), which is going to design a method and software for automated specification of software
 requirements in formal way at the same time easy to understand for non-professional reader (project sponsor).
 
 The project is still in development and preliminary results will be published before the end of this year.
