--- a/_posts/about/news/year2010/2010-08-29-pdd.md
+++ b/_posts/about/news/year2010/2010-08-29-pdd.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2010-08-29
 permalink: about/news/year2010/pdd
+tags: news
 label: PDD
 title: "Puzzle Driven Development (pdd) To Help In Distributed Projects"
 description: |
@@ -16,23 +17,23 @@ keywords:
   - continuous integration
 ---
 
-Read more on this topic in [php|Architect, August 
+Read more on this topic in [php|Architect, August
 2010](http://www.phparch.com/magazine/2010/august/) article "", by Yegor Bugayenko.
 
-Parallel programming in a distributed team is a tricky and risky process, especially if your project 
-wants to be successful and delivered on time. Subversion helps isolate programmers in their 
-branches, but when they start to reintegrate into trunk, conflicts may effectively ruin hours or 
+Parallel programming in a distributed team is a tricky and risky process, especially if your project
+wants to be successful and delivered on time. Subversion helps isolate programmers in their
+branches, but when they start to reintegrate into trunk, conflicts may effectively ruin hours or
 days of work.
 
-Distributed development of software over the last decade has been growing in popularity. This is 
-mostly due to the continuous improvement of the quality of communication channels and the emergence 
-of new methods of interaction between us, in the Internet. Nowadays, brick-and-mortar offices become 
-less effective when a software project requires the participation of engineers with different 
+Distributed development of software over the last decade has been growing in popularity. This is
+mostly due to the continuous improvement of the quality of communication channels and the emergence
+of new methods of interaction between us, in the Internet. Nowadays, brick-and-mortar offices become
+less effective when a software project requires the participation of engineers with different
 skills, experience, and price.
 
-One of the biggest problems in parallel programming is conflicts of source code. People tend to make 
-chaotic changes and then later fail to merge their results with similar contributions made by 
-others. Puzzle Driven Development (PDD) solves the problems, by means of using so called "puzzles" 
+One of the biggest problems in parallel programming is conflicts of source code. People tend to make
+chaotic changes and then later fail to merge their results with similar contributions made by
+others. Puzzle Driven Development (PDD) solves the problems, by means of using so called "puzzles"
 inside source code.
 
 More on this topic to be revealed later, when patent application is published by USPTO.
