--- a/_posts/about/news/year2011/2011-01-20-taas.md
+++ b/_posts/about/news/year2011/2011-01-20-taas.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2011-01-20
 permalink: about/news/year2011/taas
+tags: news
 label: TaaS
 title: "Team As A Service&#x2122;"
 description: |
@@ -22,11 +23,11 @@ All details about Team as a Service business model are explained in [tpc2.com](h
         <img src="data:image/png;base64,${base64:/about/news/year2011/taas.png}" alt="Team as a Service logo" style="float:right; margin-left: 2em; margin-bottom: 2em;"/>
     </a>
 
-Understanding a fast growing necessity for professional software development in distributed teams 
-TechnoPark Corp. launched a new service called "". The concept enables on-demand creation and 
+Understanding a fast growing necessity for professional software development in distributed teams
+TechnoPark Corp. launched a new service called "". The concept enables on-demand creation and
 management of distributed software development teams, effectively tailored for unique business requirements.
 
-The service will be provided for a few companies in North California. The results of this experiment 
+The service will be provided for a few companies in North California. The results of this experiment
 will be published as success stories on our website.
 
 "Team as a Service" trade/service mark is registered by USPTO, reg. no. 85-241,147.
