--- a/_posts/about/news/year2012/2012-09-22-s3auth.md
+++ b/_posts/about/news/year2012/2012-09-22-s3auth.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2012-09-22
 permalink: about/news/year2012/s3auth
+tags: news
 label: s3auth.com
 title: "S3auth.com, A Free Http Auth Gateway In Front Of Amazon S3 Bucket"
 description: |
@@ -17,10 +18,10 @@ keywords:
 
 <img src="http://img.s3auth.com/logo.png" alt="s3auth.com" style="float:right; margin-left: 2em; margin-bottom: 2em;"/>
 
-We sponsored a small hosted service for owners of Amazon S3 buckets: 
-[s3auth.com](http://www.s3auth.com/). Amazon S3 doesn't provide an ability to deliver private 
+We sponsored a small hosted service for owners of Amazon S3 buckets:
+[s3auth.com](http://www.s3auth.com/). Amazon S3 doesn't provide an ability to deliver private
 content through HTTP Basic/Digest authentication mechanisms. Our hosted service fills this gap.
 
-The product already received good feedback from users worldwide. What is especially interesting is 
-that the web service is fully open source and hosted at 
+The product already received good feedback from users worldwide. What is especially interesting is
+that the web service is fully open source and hosted at
 [github](https://github.com/yegor256/s3auth). The service itself, of course, is hosted at Amazon EC2.
