--- a/_posts/about/news/year2014/2014-04-14-teamed.md
+++ b/_posts/about/news/year2014/2014-04-14-teamed.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2014-04-14
 permalink: about/news/year2014/teamed
+tags: news
 label: teamed
 title: "Teamed.io Started To Offer Team As A Service"
 description: |
@@ -16,8 +17,8 @@ keywords:
   - offshore programming
 ---
 
-TechnoPark Corp. started a new brand [teamed.io](http://www.teamed.io), which will deliver Team as a 
+TechnoPark Corp. started a new brand [teamed.io](http://www.teamed.io), which will deliver Team as a
 Service to project sponsors and team members.
 
-The new brand aggregates all our previous achievments in this area, and will help our customers to 
+The new brand aggregates all our previous achievments in this area, and will help our customers to
 identify the product, and understand its outstanding quality.
