--- a/_posts/about/news/year2003/2003-02-05-oldnews6.md
+++ b/_posts/about/news/year2003/2003-02-05-oldnews6.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2003-02-05
 permalink: about/news/year2003/oldnews6
+tags: news
 title: "Rup-based Process: Next Step To High Quality Service"
 description: |
   TechnoPark Corp. introduced RUP-based software development
@@ -11,15 +12,15 @@ keywords:
   - software development
 ---
 
-This month, TechnoPark Corp. introduced RUP-based iterative software development process which 
-unites the best practices of RUP, XP and Agile software development methodologies. With the 
-introduction of this process, the software project lifecycle becomes clear for the customer. The 
+This month, TechnoPark Corp. introduced RUP-based iterative software development process which
+unites the best practices of RUP, XP and Agile software development methodologies. With the
+introduction of this process, the software project lifecycle becomes clear for the customer. The
 Quality Assurance discipline was reestablished as the core of software development process.
 
-is a software development methodology developed by Rational Software Corporation of IBM. According 
-to RUP framework, the project lifecycle is divided into 4 phases: inception, elaboration, 
-construction and transition. RUP covers all aspects of software development process including 
-requirements specification, software envisioning, implementation, testing, any many others. The 
+is a software development methodology developed by Rational Software Corporation of IBM. According
+to RUP framework, the project lifecycle is divided into 4 phases: inception, elaboration,
+construction and transition. RUP covers all aspects of software development process including
+requirements specification, software envisioning, implementation, testing, any many others. The
 framework is based on key principles of business-driven development.
 
 To learn more about the software development process in TechnoPark Corp., visit our website section
