--- a/_posts/about/news/year2004/2004-05-25-oldnews8.md
+++ b/_posts/about/news/year2004/2004-05-25-oldnews8.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2004-05-25
 permalink: about/news/year2004/oldnews8
+tags: news
 title: "Www2004 Presented Latest Achievements In Web And Web Standardization"
 description: |
   The international World Wide Web Conference2004 was held in
@@ -11,20 +12,20 @@ keywords:
   - software development
 ---
 
-TPC's team attended the conference in order to learn more about new web standards worked out by W3C 
+TPC's team attended the conference in order to learn more about new web standards worked out by W3C
 and study best practices in the world of web development.
 
-WWW2004 conference was organized by International World Wide Web Conference Committee (IW3C2). It 
-was opened with keynote report by Sir Tim Berners-Lee, Director of the W3C and inventor of the Web. 
-In the report he outlined the previous year's achievements in web development, focused on most 
+WWW2004 conference was organized by International World Wide Web Conference Committee (IW3C2). It
+was opened with keynote report by Sir Tim Berners-Lee, Director of the W3C and inventor of the Web.
+In the report he outlined the previous year's achievements in web development, focused on most
 actual problems and made interesting proposals.
 
-During Berners-Lee's report the discussion was mainly about Top Level Domains expansion. Recently it 
-was offered to introduce more TDLs in addition to traditional .com, .org, etc. Some variants of new 
-domain name extensions were spoken, such as .aero, .museum, .name, .bigco, and industry-specific 
-domains like .xxx and .mobi. The speaker criticized the idea emphasizing that new TDLs must be 
+During Berners-Lee's report the discussion was mainly about Top Level Domains expansion. Recently it
+was offered to introduce more TDLs in addition to traditional .com, .org, etc. Some variants of new
+domain name extensions were spoken, such as .aero, .museum, .name, .bigco, and industry-specific
+domains like .xxx and .mobi. The speaker criticized the idea emphasizing that new TDLs must be
 created only as exeptions.
 
-During the main conference, search systems development was discussed and a presentation of Amazon's 
-A9.com search system was made. The second day covered Semantic web Applications. The WWW2004 
+During the main conference, search systems development was discussed and a presentation of Amazon's
+A9.com search system was made. The second day covered Semantic web Applications. The WWW2004
 conference finished on May 21 with a traditional Developer's day.
