--- a/_posts/about/news/year2005/2005-09-18-oldnews9.md
+++ b/_posts/about/news/year2005/2005-09-18-oldnews9.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2005-09-18
 permalink: about/news/year2005/oldnews9
+tags: news
 title: "Interbill System Developed By Technopark Corp."
 description: |
   September 18, 2005 Interbill project was finished at
@@ -10,13 +11,13 @@ keywords:
   - software development
 ---
 
-The project consisted in software development for the phone billing system known as Interbill. The 
+The project consisted in software development for the phone billing system known as Interbill. The
 software was successfully released and deployed.
 
-Interbill is a system which provides phone billing to its subscribers. With InterBill, users can pay 
-invoices via their mobile phones. The main features of InterBill system are strong anti-fraud 
-protection, a chargeback prevention system, and support for multiple currencies. The system will be 
+Interbill is a system which provides phone billing to its subscribers. With InterBill, users can pay
+invoices via their mobile phones. The main features of InterBill system are strong anti-fraud
+protection, a chargeback prevention system, and support for multiple currencies. The system will be
 integrated to e-commerce websites as a payment option for buyers.
 
-During implementation, TechnoPark Corp. used PHP/MySQL and XML technologies. Detailed information 
+During implementation, TechnoPark Corp. used PHP/MySQL and XML technologies. Detailed information
 about the system is available at .
