--- a/_posts/about/news/year2006/2006-09-13-news23.md
+++ b/_posts/about/news/year2006/2006-09-13-news23.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-09-13
 permalink: about/news/year2006/news23
+tags: news
 title: "Technopark Corp.'s Website Added To Yahoo Directory"
 description: |
   TechnoPark Corp. corporate website has been approved by
@@ -11,13 +12,13 @@ keywords:
   - software development
 ---
 
-The sound checking process of TechnoPark Corp.'s website, available at , resulted in the resource's 
-listing in one of the biggest and the most important web directories. On September 12, 2006 
+The sound checking process of TechnoPark Corp.'s website, available at , resulted in the resource's
+listing in one of the biggest and the most important web directories. On September 12, 2006
 TechnoParkcorp.com web site has been added to Yahoo global directory.
 
-Inclusion of the resource to the directory highlights the website's high quality and importance. 
-From TechnoPark Corp's Management, they are proud to be a part of the global community where only 
+Inclusion of the resource to the directory highlights the website's high quality and importance.
+From TechnoPark Corp's Management, they are proud to be a part of the global community where only
 the best websites are introduced.
 
-TechnoParkcorp.com is registered in Software Development related categories. In the directory, the 
+TechnoParkcorp.com is registered in Software Development related categories. In the directory, the
 website's link is .
