--- a/_posts/about/news/year2006/2006-10-16-news22.md
+++ b/_posts/about/news/year2006/2006-10-16-news22.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-10-16
 permalink: about/news/year2006/news22
+tags: news
 title: "Technopark Corp. To Make A Presentation At Ukrainian Outsourcing Forum"
 description: |
   Ukrainian Outsourcing Forum (UOF) 2006 will take place in
@@ -12,11 +13,11 @@ keywords:
   - software development
 ---
 
-TechnoPark Corp. is invited to present a report on regional software development centers in Ukraine 
-and their tendencies. The report will cover Dnepropetrovsk region. The presentation will be made 
-during one of the scheduled Conferences of the devoted to regional outsourcing companies. TechnoPark 
+TechnoPark Corp. is invited to present a report on regional software development centers in Ukraine
+and their tendencies. The report will cover Dnepropetrovsk region. The presentation will be made
+during one of the scheduled Conferences of the devoted to regional outsourcing companies. TechnoPark
 Corp. will also take place in round-table discussion of the problems covered in the report.
 
-Ukrainian Outsourcing Forum is organized by the . The event has been held since 2003. It is the most 
-important forum in Ukrainian outsourcing industry gathering more than 100 companies from both 
+Ukrainian Outsourcing Forum is organized by the . The event has been held since 2003. It is the most
+important forum in Ukrainian outsourcing industry gathering more than 100 companies from both
 Ukraine and abroad.
