--- a/_posts/about/news/year2006/2006-10-24-news21.md
+++ b/_posts/about/news/year2006/2006-10-24-news21.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-10-24
 permalink: about/news/year2006/news21
+tags: news
 title: "Technopark Corp. Is Attending T.r.a.f.f.i.c. 2006"
 description: |
   From October 24-28, TechnoPark Corp. is attending
@@ -11,19 +12,19 @@ keywords:
   - software development
 ---
 
-These days, Miami hosts one of the most popular conferences for the domain industry, . There are 
-about 500 attendees visiting the event devoted to targeted traffic. Noah Lieske represents 
+These days, Miami hosts one of the most popular conferences for the domain industry, . There are
+about 500 attendees visiting the event devoted to targeted traffic. Noah Lieske represents
 TechnoPark Corp. at the conference.
 
-The conference is sponsored by the leading online companies including Yahoo, Google, AskJeeves, 
-Fabulous.com and others. The sponsors as well as eBay, Microsoft, Expedia, Orbitz, Travelocity, CJ, 
-Linkshare, Network Solutions and many others are expected to participate in discussions and share 
+The conference is sponsored by the leading online companies including Yahoo, Google, AskJeeves,
+Fabulous.com and others. The sponsors as well as eBay, Microsoft, Expedia, Orbitz, Travelocity, CJ,
+Linkshare, Network Solutions and many others are expected to participate in discussions and share
 their experience.
 
-According to T.R.A.F.F.I.C. organizers, "The purpose of T.R.A.F.F.I.C. is to bring domain owners and 
+According to T.R.A.F.F.I.C. organizers, "The purpose of T.R.A.F.F.I.C. is to bring domain owners and
 aggressive, forward thinking sponsors together, along with investors so that each can maximize their effort."
 
-On October 25, the Keynote Address will be presented by Tom Gardner, Co-founder of The Motley Fool, 
-the world's premiere online financial information exchange who will speak about financial 
-opportunities on the net. The Conference will be closed on October 27 with the 2006 T.R.A.F.F.I.C. 
+On October 25, the Keynote Address will be presented by Tom Gardner, Co-founder of The Motley Fool,
+the world's premiere online financial information exchange who will speak about financial
+opportunities on the net. The Conference will be closed on October 27 with the 2006 T.R.A.F.F.I.C.
 Annual Awards Dinner.
