--- a/_posts/about/news/year2006/2006-10-26-news19.md
+++ b/_posts/about/news/year2006/2006-10-26-news19.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-10-26
 permalink: about/news/year2006/news19
+tags: news
 title: "Technopark Corp. Finished Modera Project"
 description: |
   TechnoPark Corp. has finished the development of a plug-in
@@ -10,15 +11,15 @@ keywords:
   - software development
 ---
 
-The plug-in enables sending SMS, ads, news, notifications and other content to visitors of user 
-websites. The project was launched in September 2006. This week, the plug-in has been successfully 
+The plug-in enables sending SMS, ads, news, notifications and other content to visitors of user
+websites. The project was launched in September 2006. This week, the plug-in has been successfully
 tested and deployed by TechnoPark Corp.'s engineers.
 
-The developed system contains WYS/WYG message editor and rich mail templates. The software enables 
+The developed system contains WYS/WYG message editor and rich mail templates. The software enables
 scheduling submissions and can be integrated into any web site developed in CMS "Modera".
 
-The system is managed by an administrator who is able to create and edit the content of messages, 
+The system is managed by an administrator who is able to create and edit the content of messages,
 manage templates, schedule submissions, create and edit blacklists, and organize users into groups.
 
-The project has been implemented on PHP+MySQL Platform. The volume of the project totaled more than 
+The project has been implemented on PHP+MySQL Platform. The volume of the project totaled more than
 300 hours.
