--- a/_posts/about/news/year2006/2006-11-18-news15.md
+++ b/_posts/about/news/year2006/2006-11-18-news15.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2006-11-18
 permalink: about/news/year2006/news15
+tags: news
 title: "Technopark Corp. Visited Sec(r) 2006"
 description: |
   On November 16 - 17, Software Engineering Conference
@@ -12,14 +13,14 @@ keywords:
   - software development
 ---
 
-This year SEC(R)'s audience gathered companies from eastern and western Europe, with the majority of 
-attendees from CIS countries. offered keynote talks byleaders in the field, invited presentations 
-along specialized themes, workshops, round table discussions and presentations of technical papers 
+This year SEC(R)'s audience gathered companies from eastern and western Europe, with the majority of
+attendees from CIS countries. offered keynote talks byleaders in the field, invited presentations
+along specialized themes, workshops, round table discussions and presentations of technical papers
 on software research, the cutting edge of practice, and new developments in software engineering.
 
-The 2006 conference was focused on provision of business value by differentiating from their 
-competitors in a myriad of ways. The reports covered Technology and Technology Solutions and Human 
-Aspects in Software Engineering. Process Management, Project Management and QA Management became the 
+The 2006 conference was focused on provision of business value by differentiating from their
+competitors in a myriad of ways. The reports covered Technology and Technology Solutions and Human
+Aspects in Software Engineering. Process Management, Project Management and QA Management became the
 most burning issues at the conference.
 
 Next year, TechnoPark Corp. will not only participate in SEC(R) as an attendee, but also make a presentation.
