--- a/_posts/about/news/year2007/2007-03-21-news11.md
+++ b/_posts/about/news/year2007/2007-03-21-news11.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-03-21
 permalink: about/news/year2007/news11
+tags: news
 title: "Technopark Corp. Becomes Member Of Russoft"
 description: |
   TechnoPark Corp. has become an associate member of RUSSOFT
@@ -12,40 +13,40 @@ keywords:
   - software development
 ---
 
-It is the major software association in the region uniting leading outsourcing software development 
-companies. The Association's website provides software market studies and information about software 
+It is the major software association in the region uniting leading outsourcing software development
+companies. The Association's website provides software market studies and information about software
 development companies from the Ukraine, Belarus and Russia.
 
-As a respected organization, RUSSOFT Association provides strict criteria for its members. Only 
-companies that meet the criteria are granted membership. By becoming a RUSSOFT Association member, 
+As a respected organization, RUSSOFT Association provides strict criteria for its members. Only
+companies that meet the criteria are granted membership. By becoming a RUSSOFT Association member,
 TechnoPark Corp. proved its high level of services and products.
 
-The Association unites about 80 companies now, including TechnoPark Corp. From RUSSOFT Association: 
-"We maintain the highest level of international standards, professional training and quality 
-control, whereas our companies are the absolute leaders by CMMI/ISO certification in Europe. Their 
-capabilities have been proven by long term customer relationships and partnerships with such 
+The Association unites about 80 companies now, including TechnoPark Corp. From RUSSOFT Association:
+"We maintain the highest level of international standards, professional training and quality
+control, whereas our companies are the absolute leaders by CMMI/ISO certification in Europe. Their
+capabilities have been proven by long term customer relationships and partnerships with such
 companies as IBM, Boeing, SAP, Italtel, CSC and others."
 
-The outsourcing industry is swiftly developing in eastern Europe. This development is stimulated by 
-high intellectual potential derived from the powerful military sector of the USSR, low cost of IT 
+The outsourcing industry is swiftly developing in eastern Europe. This development is stimulated by
+high intellectual potential derived from the powerful military sector of the USSR, low cost of IT
 personnel, governmental support, and cultural ties with western Europe.
 
-Today, small and medium-sized businesses are major customers of eastern European offshoring 
-companies. Major corporations still hesitate about offshoring software projects to the region, 
-because of the lack of knowledge about the area. To solve this problem, IT outsourcing associations 
-are established, and international forums and conferences are held in the leading outsourcing 
+Today, small and medium-sized businesses are major customers of eastern European offshoring
+companies. Major corporations still hesitate about offshoring software projects to the region,
+because of the lack of knowledge about the area. To solve this problem, IT outsourcing associations
+are established, and international forums and conferences are held in the leading outsourcing
 locations of eastern Europe which are Russia, Belarus and Ukraine.
 
-RUSSOFT is the largest association in the region, and membership is only granted to reliable and 
-mature IT outsourcing companies. For an outsourcer searching for a partner in the region, RUSSOFT 
-membership should guarantee high quality products and processes as well as reliability of the 
-provider. Benefits of membership for outsourcing software development service providers include 
+RUSSOFT is the largest association in the region, and membership is only granted to reliable and
+mature IT outsourcing companies. For an outsourcer searching for a partner in the region, RUSSOFT
+membership should guarantee high quality products and processes as well as reliability of the
+provider. Benefits of membership for outsourcing software development service providers include
 additional promotional opportunity and communication of experience with other industry players.
 
-Besides RUSSOFT, TechnoPark Corp. is a member of Ukrainian High-Tech Initiative - the biggest 
-association of IT outsourcing companies in the Ukraine. TechnoPark Corp. is a standing speaker at 
-the annual Ukrainian Outsourcing Forum (UOF) held by the Ukrainian High-Tech Initiative. From 
-TechnoPark Corp., membership in associations and participation in forums and conferences are 
-necessary not only for the company's self-promotion, but also for the promotion of IT Outsourcing 
-Industry in the Ukraine, as long as the country has a very high potential to become one of the 
+Besides RUSSOFT, TechnoPark Corp. is a member of Ukrainian High-Tech Initiative - the biggest
+association of IT outsourcing companies in the Ukraine. TechnoPark Corp. is a standing speaker at
+the annual Ukrainian Outsourcing Forum (UOF) held by the Ukrainian High-Tech Initiative. From
+TechnoPark Corp., membership in associations and participation in forums and conferences are
+necessary not only for the company's self-promotion, but also for the promotion of IT Outsourcing
+Industry in the Ukraine, as long as the country has a very high potential to become one of the
 world's outsourcing leaders in the next few years.
