--- a/_posts/about/news/year2007/2007-04-25-news9.md
+++ b/_posts/about/news/year2007/2007-04-25-news9.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-04-25
 permalink: about/news/year2007/news9
+tags: news
 title: "Technopark Corp. Launches Social Web Project"
 description: |
   TechnoPark Corp. recently began work on a new social and
@@ -11,13 +12,13 @@ keywords:
   - software development
 ---
 
-The site will connect users seeking social and political interaction using state-of-the-art video 
-blogging and conferencing technologies. With this product, TechnoPark seeks to change the landscape 
-of online politicking by giving a powerful new platform where candidates, proponents, and opponents 
+The site will connect users seeking social and political interaction using state-of-the-art video
+blogging and conferencing technologies. With this product, TechnoPark seeks to change the landscape
+of online politicking by giving a powerful new platform where candidates, proponents, and opponents
 can meet "face to face" through near real time and archived video.
 
-Built with PHP/Flash, the site has yet to be named but the name will reflect the changing face of 
+Built with PHP/Flash, the site has yet to be named but the name will reflect the changing face of
 political debate and information delivery.
 
-The project is being developed on a PHP/Macromedia Flash platform and will require an estimated 
+The project is being developed on a PHP/Macromedia Flash platform and will require an estimated
 1,350 staff hours to complete.
