--- a/_posts/about/news/year2007/2007-06-04-news6.md
+++ b/_posts/about/news/year2007/2007-06-04-news6.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-06-04
 permalink: about/news/year2007/news6
+tags: news
 title: "Wikifox Project Finished"
 description: |
   June 4, 2007 -- TechnoPark Corp. recently finished WikiFox,
@@ -11,16 +12,16 @@ keywords:
   - software development
 ---
 
-WikiFox, located at , gathers information about websites all overthe Web. Information collected 
-includes website titles, descriptions,keywords, logos, page ranks, site owner's details, etc. 
+WikiFox, located at , gathers information about websites all overthe Web. Information collected
+includes website titles, descriptions,keywords, logos, page ranks, site owner's details, etc.
 WikiFox users areable to search this goldmine of data in seconds just by entering in a webaddress.
 
-WikiFox combines the revolution of user-based knowledge systems and search technology into a 
-powerful new web research tool. With WikiFox, users are able to find information about websites and 
+WikiFox combines the revolution of user-based knowledge systems and search technology into a
+powerful new web research tool. With WikiFox, users are able to find information about websites and
 also edit WikiFox pages. Users can even add new pages and information of their own.
 
-The system, based on MediaWiki opensource software, uses the Wiki database. In addition to 
+The system, based on MediaWiki opensource software, uses the Wiki database. In addition to
 OpenSource MediaWiki Engine, PHP was used for the project implementation.
 
-The project was developed by TechnoPark Corp. and successfully delivered to TechnoPark Corp.'s 
+The project was developed by TechnoPark Corp. and successfully delivered to TechnoPark Corp.'s
 customer. WikiFox will be supported and maintained by TechnoPark Corp.
