--- a/_posts/about/news/year2007/2007-06-07-news5.md
+++ b/_posts/about/news/year2007/2007-06-07-news5.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2007-06-07
 permalink: about/news/year2007/news5
+tags: news
 title: "Technopark Corp. Introduces German Version Of Corporate Web Site"
 description: |
   A German version of TechnoPark Corp.'s web \site is now
@@ -13,17 +14,17 @@ keywords:
 
 TechnoPark Corp. introduced its new . The company already had web resources in English and Russian.
 
-With the addition of German support, TechnoPark Corp. expects to significant growth in its client 
-base, especially as the company's research shows that Indian outsourcing companies are not readily 
+With the addition of German support, TechnoPark Corp. expects to significant growth in its client
+base, especially as the company's research shows that Indian outsourcing companies are not readily
 able to compete in the German market.
 
-The conservative business element of Europe is more likely to choose "nearshoring" instead of 
+The conservative business element of Europe is more likely to choose "nearshoring" instead of
 "offshoring" when it comes to contracting out web development needs, TechnoPark has found.
 
-With a wide choice of providers located geographically close to their countries, western European 
-businesses generally prefer nearsourcing their IT projects to central and eastern Europe. 
-TechnoPark's proven history and U.S. division gives it a distinct advantage over the emerging 
-software outsourcing destinations of Hungary, Romania, Czech Republic, Belarus, Russia and even its 
+With a wide choice of providers located geographically close to their countries, western European
+businesses generally prefer nearsourcing their IT projects to central and eastern Europe.
+TechnoPark's proven history and U.S. division gives it a distinct advantage over the emerging
+software outsourcing destinations of Hungary, Romania, Czech Republic, Belarus, Russia and even its
 home in the Ukraine.
 
 TechnoPark has isolated three practical reasons why western European businesses choose the firm for nearshoring:
@@ -36,8 +37,8 @@ TechnoPark has isolated three practical reasons why western European businesses 
 <li><strong>Geographical proximity.</strong> Ukraine is a maximum three hour flight
  from any European country, and there are direct flights from most countries. </li></ol>
 
-"We chose to start a German division because we have already had successful experiences implementing 
-projects for German clients," explains Egor Bougaenko, CEO of TechnoPark Corp. "We feel that Germany 
+"We chose to start a German division because we have already had successful experiences implementing
+projects for German clients," explains Egor Bougaenko, CEO of TechnoPark Corp. "We feel that Germany
 is a good market, so we want to address German businesses in their language."
 
 For more information on the German division of TechnoPark Corp. visit .
