--- a/_posts/about/news/year2010/2010-11-03-xdsd.md
+++ b/_posts/about/news/year2010/2010-11-03-xdsd.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2010-11-03
 permalink: about/news/year2010/xdsd
+tags: news
 label: XDSD Introduced
 title: "Extremely Distributed Software Development"
 description: |
@@ -20,9 +21,9 @@ keywords:
   - XDSD
 ---
 
-[XDSD](http://www.xdsd.org) is a collection of principles of software development widely used in 
-open source world, but very rarely applied to commercial projects. When these ground rules (there 
-are four) are properly implemented in a project they guarantee higher quality of code and 
+[XDSD](http://www.xdsd.org) is a collection of principles of software development widely used in
+open source world, but very rarely applied to commercial projects. When these ground rules (there
+are four) are properly implemented in a project they guarantee higher quality of code and
 significantly reduce risks of failure.
 
 The XDSD principles are:
@@ -30,16 +31,16 @@ The XDSD principles are:
  * Everyone gets paid for verified deliverables
  * Defects are planned and don't block delivery
  * Quality-of-code metrics are CI gate conditions
- * VCS commits to 
+ * VCS commits to
  *  are prohibited
 
-A successful implementation of [XDSD](http://www.xdsd.org) in any particular project requires an 
-existence of certain tools, technologies, and skills, which typical project teams rarely, if ever, 
-possess. Institutionalization of these four rules in a software development team is a task of high 
+A successful implementation of [XDSD](http://www.xdsd.org) in any particular project requires an
+existence of certain tools, technologies, and skills, which typical project teams rarely, if ever,
+possess. Institutionalization of these four rules in a software development team is a task of high
 complexity, and will affect almost all aspects of business and social life of its members.
 
-Email us to get a white paper about [XDSD](http://www.xdsd.org) and its proprietary implementation 
+Email us to get a white paper about [XDSD](http://www.xdsd.org) and its proprietary implementation
 provided by TechnoPark Corp.
 [24-7pressrelease.com](http://www.24
--7pressrelease.com/press-release/is-new-software-development-methodology-a-silver-bullet-183455.php) 
+-7pressrelease.com/press-release/is-new-software-development-methodology-a-silver-bullet-183455.php)
 | [free-press-release.com](http://www.free-press-release.com/news-is-new-software-development-methodology-a-silver-bullet-1290629830.html)
