--- a/_posts/about/news/year2013/2013-07-05-jcabi.md
+++ b/_posts/about/news/year2013/2013-07-05-jcabi.md
@@ -2,6 +2,7 @@
 layout: article
 date: 2013-07-05
 permalink: about/news/year2013/jcabi
+tags: news
 label: jcabi
 title: "Open Source Java Project Jcabi.com Sponsored By Us"
 description: |
@@ -14,7 +15,7 @@ keywords:
   - jcabi
 ---
 
-TechnoPark Corp. started to sponsor a new open source project JCabi.com, which is a collection of 
+TechnoPark Corp. started to sponsor a new open source project JCabi.com, which is a collection of
 small Java components and utilities.
 
 The project will also be an experimental zone for our distributed programming technologies.
